--- a/CellScopeLoa/Base.lproj/Main.storyboard
+++ b/CellScopeLoa/Base.lproj/Main.storyboard
@@ -477,7 +477,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WXc-Tw-IDs">
-                                <rect key="frame" x="97" y="480" width="126" height="36"/>
+                                <rect key="frame" x="16" y="480" width="288" height="36"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <state key="normal" title="Enter ID Manually">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -1351,6 +1351,6 @@
         <image name="upload-cloud" width="4339" height="3042"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="Ssu-Lk-28a"/>
+        <segue reference="dA2-SE-dhP"/>
     </inferredMetricsTieBreakers>
 </document>
